--- a/music-app/package.json
+++ b/music-app/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "recompose": "^0.30.0",
+    "secure-random-password": "^0.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
