--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "server.js",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "mongoose": "^6.1.5",
+    "node.js": "^0.0.1-security",
     "react": "^17.0.2",
     "react-spotify-web-playback": "^0.9.1",
     "session-file-store": "^1.5.0",
     "spotify-web-api-node": "^5.0.2",
     "store": "^2.0.12"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
