--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "spotify-web-api-node": "^5.0.2",
     "store": "^2.0.12"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^27.4.7"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
